# Linux_Cpp

./: .git-credentials  README.txt  dd  ddafaf  git.sh  readme.txt  svn.sh
.AppleDouble/: .Parent  .git.sh.swp  git.sh  readme.txt
DDNS/: ddns.py
DDNS/ddns/: ddns.py
Linux_Voice/.AppleDouble/: .Parent
NanoPi/: cam.py
NanoPi/.AppleDouble/: .Parent
Projects/.AppleDouble/: .Parent
Projects/cmake/: CMakeLists.txt  main.cpp
Projects/cmake/src/: CMakeLists.txt  app.cpp
QT/: te.py  test.py
QT/.AppleDouble/: .Parent
QT/build-serial-sd-Debug/: Makefile  moc_mainwindow.cpp  serial  ui_mainwindow.h
QT/serial/: mainwindow.cpp  mainwindow.h  mainwindow.ui  (+1 more)
SystemInfor/: a.out  cpurate.c
TCP通信/: a.out  client.c  get_iplist.c  get_iplist.h  server.c  tcp_server.cpp  tcp_server.h
ascii/: a.out  main.c
c++/: Makefile  cplus  cplus.cpp
camshot/: Makefile  arguments.c  arguments.h  camera.c  camera.h  image.c  main.c  shmem.c  shmem.h  shmem_test.c
face_recognition/: captrue.py  main.py
freetype/: auto.sh  example  example.c
java/: tcpip.bz
json/: test.py
licheePi/: a.out  cameratest.c  tcamera.py  uart_AT.c  uart_recv.c  uart_recv.h
lua/: log.txt  test.lua  test.txt
matata/: 1.py  2.py
mjpeg/: auto.sh  exe  main.c  main.py
mlx90640/: .main.py.swp  main.py
nat/: a.out  main.c
opencv/: add.py  bianyuan.py  marry.py  match.py  mbpp.py  sface.py  t.py  tx.py
shell/: install_python-opencv.sh
sochip/: gray0001.yuv  start_audio.7z
turing/: demo.pcm  iat.py  main.py
voice/: README
入口参数/: a.out  main.c
文件操作/: a.out  main.c  out.txt
(+357 files in other folders)
